module1/src/main/java/org/example/error/ErrorCode.java
package org.example.error;

public enum ErrorCode {
    VALIDATION_ERROR,
    INPUT_COMMAND_ERROR
}
